# symcore

./: README.md  pyproject.toml  requirements.txt  usage_example.py
.github/workflows/: pytest.yml
src/: __init__.py  cli.py
src/engine/: Expression.py  Lexer.py  Parser.py  Token.py
src/nodes/: BinaryOperator.py  Literal.py  Node.py  UnaryOperator.py  Variable.py
tests/: test_differentiation.py  test_evaluation_substitution.py  test_integration.py  test_lexer.py  test_parser.py  test_performance.py  test_properties.py  test_simplification.py  test_system_interface.py
